--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Prueba Tecnica</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
